kubernetes/changedetection/changedetection.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: changedetection
  namespace: changedetection
spec:
  replicas: 1
  selector:
    matchLabels:
      app: changedetection
  template:
    metadata:
      labels:
        app: changedetection
    spec:
      nodeSelector:
        kubernetes.io/hostname: yumi
      containers:
      - name: changedetection
        image: ghcr.io/dgtlmoon/changedetection.io:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        volumeMounts:
          - name: changedetection-data
            mountPath: /datastore
      volumes:
        - name: changedetection-data
          hostPath:
            path: /var/mnt/changedetection
            type: Directory

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playwright-chrome
  namespace: changedetection
spec:
  replicas: 1
  selector:
    matchLabels:
      app: playwright-chrome
  template:
    metadata:
      labels:
        app: playwright-chrome
    spec:
      containers:
      - name: playwright-chrome
        image: browserless/chrome:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "2Gi"
            cpu: "2000m"
