kubernetes/changedetection/changedetection-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: changedetection
  namespace: changedetection
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`changedetection.timo.be`) || Host(`changedetection.kubernetes.timo.be`)
      kind: Rule
      services:
        - name: changedetection
          port: 5000
